# psys_waermeleitungsgleichung

./: .gitignore  README  README.md  makefile
gui/: .gitignore  CMakeLists.txt  README.md  head_contuction_gui  main.c  main.js  package.json
gui/app/: index.html
gui/app/css/: nouislider.min.css  style.css
gui/app/js/: index.js
gui_gtk/: makefile
opencl/: README.md  core.c  core.h  heat_conduction.c  kernel.cl  makefile  opencl.cfg
opencl/html/: core_8c.html  core_8c.js  core_8h.html  core_8h.js  core_8h_source.html  files.html  files.js  globals.html  globals_func.html  heat__conduction_8c.html  index.html  navtreedata.js  navtreeindex0.js  opencll.tag
openmp/: core.c  core_test  core_test.d  heat_conduction  heat_conduction.d  makefile
openmp_fast/: README  README.md  core.c  core.h  heat_conduction.c  openmp_fast.cfg
openmp_fast/html/: core_8c.html  core_8h.html  core_8h_source.html  core__test_8c.html  files.html  globals.html  globals_func.html  heat__conduction_8c.html  index.html  navtreedata.js  openmp_fast.tag
openmp_manually/: .gitignore  README.md  core.c  core_test.c
openmp_manually/html/: core_8c.html  core_8h.html  core_8h_source.html  core__test_8c.html  files.html  globals.html  globals_func.html  heat__conduction_8c.html  index.html  navtreedata.js  openmp_manually.tag
openmp_slow/: CMakeLists.txt  README.md  core.c  heat_conduction.c  openmp_slow.cfg
openmp_slow/html/: files.js  (+13 more)
serial/: .gitignore  CMakeLists.txt  README.md  core.c  core.h  core_test.c  head_conduction  head_conduction.c  heat_conduction.c  makefile  serial.cfg
(+34 files in other folders)
